client/sass/globals/_components.scss
$menuWidth: 40vw;

$cardHoverScaleMin: scale3d(1.125, 1.125, 1.125);
$cardHoverScaleMax: scale3d(1.15,  1.15,  1.15);

$cardBorderWidth:   2.5pt;
$cardBorder:        $cardBorderWidth solid $colorType;
$cardBoxShadow:     $gutter $gutter 0 rgba(0,0,0,.6);


@mixin cardStyle {
    background-color: $colorCardBackground;
    border: $cardBorder;
    padding: $cardPadding;
    transform-origin: bottom right;
    -webkit-transform-origin: bottom right;
}

@mixin cardHover {
    @include box-shadow($gutter $gutter 0 rgba(0,0,0,.6));
    background-color: $colorWashLight;
    @include transform($cardHoverScaleMin);
}

@mixin cardDrag {
    cursor: move;
    @include transform($cardHoverScaleMax);
    @include box-shadow($gutter $gutter 0 rgba(0,0,0,.6));
}

@mixin button {
    // @include cardStyle;
    // padding: $gutter;
    // 
    // &:hover, &:focus {
    //     @include cardHover;
    //     @include transform(scale(1.125));
    // }
    // 
    // &:active {
    //     @include transform(scale(.925));
    //     @include box-shadow(0 $gutter/6 $gutter/2 rgba(0,0,0,.125));
    // }
    
}

@mixin buttonOffset {
    // position: relative;
    // margin-left: -$gutter*1.5;
    // margin-top: -.666em;
    // left: 100%;
    // float: left;
}

a {
    &:hover, &:active, &:focus {
        @include hoverAnimation;
    }
}

.card {
    
    &.form {
        padding-left: $gutter * 2 !important;
    }
}

form {
    position: relative;
}

label {
    @include typeBody;
}

@mixin placeHolderOverride {
    color: $colorType;
    font-style: italic;
    opacity: 1;
    text-transform: none;
    
    &:hover {
        @include hoverAnimation;
    }
}

::-webkit-input-placeholder {
    @include placeHolderOverride;
}

:-moz-placeholder {
    @include placeHolderOverride;
}
::-moz-placeholder { 
    @include placeHolderOverride;
}
:-ms-input-placeholder { 
    @include placeHolderOverride;
}


input {
    @include resetInput;
    @include typeBody;
    color: $colorType;
    border-bottom: .125em $colorType solid;
        
    &:focus, &:hover {
        @include hoverAnimation;
    }
    
    &.offset {
        @include button;
        @include buttonOffset;
    }
    
    &[type=submit], &[type=button] {
        border: 0;
        cursor: pointer;
    }
    
    &[type=checkbox] {
        width: 1em;
        margin-left: -1.5em;
        margin-right: .5em;
    }
    
    &[type=email] {
        text-transform: lowercase;
    }
    
}

ul.menu {
    height: $baseline * 2;
    position: relative;
    display: inline-block;
    width: $menuWidth/2;
    @include transition(1s $defaultCurve);
    @include transition-property(left, right);
    
    &:hover, &.open {
        @include transition(2s $defaultCurve);
        width: $menuWidth;
        
        li {
            
            a, form {
                position: relative;
            }
        }
    }

    &.hideFirst {
        
        &.right {
            &:hover, &.open {
                > li:nth-child(1) {
                    right: -50vw;
                }
            }
        
            > li:nth-child(1) {
                right: 0;
            }
        }
        
        &.left {
            &:hover, &.open {
                > li:nth-child(1) {
                    left: -50vw;
                }
            }

            > li:nth-child(1) {
                left: 0;
            }
        }
        
        > li:nth-child(1) {
            position: absolute;
            @include transition(1s $defaultCurve);
            @include transition-property(right);
        }
    }
    
    &.left {
        float: left;
        left: 0;
        
        li {
            left: -50vw;
            @include transition-property(left, opacity);
            
            &:nth-of-type(1) {
                left: 0;
            }
                        
            a {
                position: relative;
                left: 0;
                @include transition(left .25s $defaultCurve);
                
                &:hover, &:active, &:focus {
                    left: $gutter * 2;
                }
            }
        }
        
        &:hover, &.open {
            li {
                left: 0;
            }
        }    
    }
    
    &.right {
        float: right;
        text-align: right;
        right: 0;
        
        li {
            right: -50vw;
            @include transition-property(right, opacity);
            
            &:nth-of-type(1) {
                right: 0;
            }
            
            form, input {
                text-align: right;
            }
            
            a {
                position: relative;
                right: 0;
                @include transition(right .25s $defaultCurve);
                
                &:hover, &:active, &:focus {
                    right: $gutter * 2;
                }
            }
        }
        
        &:hover, &.open {
            li {
                right: 0;
            }
        }
    }
    
    &.hidden {
        
        &.left {
            left: -$menuWidth * 1.5;
        }
        
        &.right {
            right: -$menuWidth * 1.5;
        }
    }
    
    li {
        position: relative;
        @include transition(.5s $defaultCurve);
    
        &.heading {
            @include typeBody;
            text-transform: lowercase;
            padding-top: $leading;
        }
        
        form {
            white-space: nowrap;
        }
        
        > a {
            display: block;
            width: 100%;
            position: relative;
        }
/*
        
        &:nth-of-type(2)  { @include transition-delay(.19s); }
        &:nth-of-type(3)  { @include transition-delay(.18s); }
        &:nth-of-type(4)  { @include transition-delay(.17s); }
        &:nth-of-type(5)  { @include transition-delay(.16s); }
        &:nth-of-type(6)  { @include transition-delay(.15s); }
        &:nth-of-type(7)  { @include transition-delay(.14s); }
        &:nth-of-type(8)  { @include transition-delay(.13s); }
        &:nth-of-type(9)  { @include transition-delay(.12s); }
        &:nth-of-type(10) { @include transition-delay(.11s); }
        &:nth-of-type(11) { @include transition-delay(.10s); }
        &:nth-of-type(12) { @include transition-delay(.9s); }
        &:nth-of-type(13) { @include transition-delay(.8s); }
        &:nth-of-type(14) { @include transition-delay(.7s); }
        &:nth-of-type(15) { @include transition-delay(.6s); }
        &:nth-of-type(16) { @include transition-delay(.5s); }
        &:nth-of-type(17) { @include transition-delay(.4s); }
        &:nth-of-type(18) { @include transition-delay(.3s); }
        &:nth-of-type(19) { @include transition-delay(.2s); }
        &:nth-of-type(20) { @include transition-delay(.1s); }
*/
        
        &:nth-of-type(2)  { @include transition-delay(.1s); }
        &:nth-of-type(3)  { @include transition-delay(.2s); }
        &:nth-of-type(4)  { @include transition-delay(.3s); }
        &:nth-of-type(5)  { @include transition-delay(.4s); }
        &:nth-of-type(6)  { @include transition-delay(.5s); }
        &:nth-of-type(7)  { @include transition-delay(.6s); }
        &:nth-of-type(8)  { @include transition-delay(.7s); }
        &:nth-of-type(9)  { @include transition-delay(.8s); }
        &:nth-of-type(10) { @include transition-delay(.9s); }
        &:nth-of-type(11) { @include transition-delay(.10s); }
        &:nth-of-type(12) { @include transition-delay(.11s); }
        &:nth-of-type(13) { @include transition-delay(.12s); }
        &:nth-of-type(14) { @include transition-delay(.13s); }
        &:nth-of-type(15) { @include transition-delay(.14s); }
        &:nth-of-type(16) { @include transition-delay(.15s); }
        &:nth-of-type(17) { @include transition-delay(.16s); }
        &:nth-of-type(18) { @include transition-delay(.17s); }
        &:nth-of-type(19) { @include transition-delay(.18s); }
        &:nth-of-type(20) { @include transition-delay(.19s); }
    }
}

.mask {
    height: 100vh;
    width: 100vw;
    position: absolute;
    top: 0;
    left: 0;
    background: transparent;
    z-index: 10;
}

textarea {
  @include resetInput;
  @include typeBody;   
  width: 100%;
  height: $baseline;
}

